--- a/_posts/2022-07-04-PD1.md
+++ b/_posts/2022-07-04-PD1.md
@@ -12,13 +12,13 @@ I begin this blog by telling you my dream when I applied for college: I wanted t
 
 I would like to believe that pursuing ELS was beneficial to who I am today as a language educator. It taught me how diverse English(es) is and how complex the issues are surrounding languages. It also provided me with an understanding of linguistic theories and frameworks involving language structures, language change, language acquisition, and language in society. However, while my major did have language teaching courses such as *Developing Reading and Critical Thinking Skills*, *Developing Oral Communication Skills*, *Developing Writing Skills*, and even *Introduction to Language Assessment*, these courses centered more on theories than pedagogical know-how. We did discuss some teaching strategies, but we were not given opportunities to apply them in an actual or even a mock context. We only got to apply them once in a mock teaching demonstration, where we had to illustrate strategies in teaching reading. After all, we were not majors of education. In other words, I did not have sufficient teaching experience. 
 
-My lack of prior formal teaching experience left a lasting impact on me when I became a lecturer in 2016. In my first semester, I was assigned four  course preparations and 11 classes - an overload - due to a lack of available faculty members at the time. While preparing for my first day of classes, I knew what I could and should not do. I was confident about how I could teach technical writing (i.e., writing correspondences and office reports), since I could share my experiences when I was a student organization officer. However, I found it challenging to plan for teaching the five research writing courses assigned to me. As such, I resorted to recalling how my past research teachers facilitated the research classes and modeled my instruction based on those. But even so, I have personally found that my teaching have not always delivered my intended learning outcomes - an even bigger problem. I knew I had to do something. 
+My lack of prior formal teaching experience left a lasting impact on me when I became a lecturer in 2016. In my first semester, I was assigned four  course preparations and 11 classes - an overload - due to a lack of available faculty members at the time. While preparing for my first day of classes, I knew what I could and should not do. I was confident about how I could teach technical writing (i.e., writing correspondences and office reports), since I could share my experiences when I was a student organization officer. However, I found it challenging to plan for teaching the five research writing courses assigned to me. As such, I resorted to recalling how my past research teachers facilitated the research classes and modeled my instruction based on those. But even so, I have personally found that my teaching had not always delivered my intended learning outcomes - an even bigger problem. I knew I had to do something. 
 
 ## Why Teachers Need Both Theory and Experience
 
-Education research tells us that theory and experience work hand-in-hand in our teaching. An awareness of theories allows us to become principled - that is, our pedagogical decisions are not based on vibes or assumptions but are guided by empirical research. When we are principled, we are informed of how the mechanisms of the learning process operates. But our understanding of theories need to be complemented with experiences, which becomes crucial as we face unique learning issues inside the classroom.
+Education research tells us that theory and experience work hand-in-hand in our teaching. An awareness of theories allows us to become principled - that is, our pedagogical decisions are not based on vibes or assumptions but are guided by empirical research. When we are principled, we are informed of how the mechanisms of the learning process operates. But our understanding of theories needs to be complemented with experiences, which becomes crucial as we face unique learning issues inside the classroom.
 
-In my case, I lacked that experience necessary to make pedagogical decisions that benefit each unique class. But I am thankful for having a patient and compassionate mentor who provided pedagogical guidance. My department chairperson offered me strategies that worked when he taught these classes and engaged me in brief discussions over lunch about the theories that informed those strategies. When he observed three of my classes, he used that as a formative opportunity to discuss my pedagogical techniques in light of language learning theories. His insights and expertise was of immense help to my teaching in the succeeding semesters that I served as a teacher. Over time, I gained enough pedagogical experience in higher education and can now enact teaching decisions that are research-informed. 
+In my case, I lacked that experience necessary to make pedagogical decisions that benefit each unique class. But I am thankful for having a patient and compassionate mentor who provided pedagogical guidance. My department chairperson offered me strategies that worked when he taught these classes and engaged me in brief discussions over lunch about the theories that informed those strategies. When he observed three of my classes, he used that as a formative opportunity to discuss my pedagogical techniques in light of language learning theories. His insights and expertise were of immense help to my teaching in the succeeding semesters that I served as a teacher. Over time, I gained enough pedagogical experience in higher education and can now enact teaching decisions that are research informed. 
 
 However, I felt that I was still lacking on learning theories as a whole. After all, language learning is quite different from other subject areas. I still felt the need to improve the way I teach. In order to do that, I need to relate and reflect on my teaching practices (i.e., experiences) with learning theories. At the same time, I need to become (re-)acquainted with different principles and strategies of teaching. These professional needs led me to pursue a professional teacher certification at the UPOU. 
 
